--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
 v0.1, January 6, 2013 -- Initial release.
 v0.1.3, February 1, 2013 -- full json post.
 v0.1.4, February 1, 2013 -- logging error on debug.
+v0.1.6, February 2, 2013 -- switched to email_data in json post.
