--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,3 +4,4 @@ v0.1.4, February 1, 2013 -- logging error on debug.
 v0.1.6, February 2, 2013 -- switched to email_data in json post.
 v1.0.0, April 7, 2013 -- updated for v1_0 of SWU API
 v1.0.1, April 13, 2013 -- fixed MANIFEST.in not pulling .md files
+v1.0.5 October 3, 2013 -- Added create_email support
