--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,4 +7,4 @@ v1.0.1, April 13, 2013 -- fixed MANIFEST.in not pulling .md files
 v1.0.5, October 3, 2013 -- Added create_email support
 v1.0.7, November 25, 2013 -- Fix setup.py depending on requests
 v1.0.8, November 27, 2013 -- update api subdomain
-
+v1.0.12, February 16, 2013 -- Added support for tags
